# ollamasearch

./: LICENSE  README.md  output.md  pyproject.toml  requirements.txt  search_agent.py  sys_msgs.py  web_agent.py  web_agent_class.py
examples/: output.md  settings.yaml
src/ollamasearch/: __init__.py  agent_swarm.py  run_agent_swarm.py
src/ollamasearch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_agent_swarms.py
